# deadbeef-lyrics

./: .hgignore  CMakeLists.txt  INSTALL  Makefile  README  TODO  lyrics.c
